# Flappy-Bird-clone

./: BackGround.cpp  BackGround.h  Bird.cpp  Bird.h  CMakeLists.txt  Game.cpp  Game.h  Pipe.cpp  Pipe.h  main.cpp  myLayer.h
freetype_GL/: edtaa3func.c  texture-atlas.c  texture-atlas.h  texture-font.c
src/: engine_gl.h
src/Maths/: Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  maths.h
src/audio/: sound.cpp  sound.h  sound_manager.cpp  sound_manager.h
src/graphics/: batch_renderer_2_d.cpp  batch_renderer_2_d.h  font.cpp  font.h  font_manager.cpp  font_manager.h  label.cpp  label.h  renderable_2_d.h  renderer_2_d.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h  window.cpp  window.h
src/graphics/buffer/: buffer.cpp  buffer.h  index_buffer.cpp  index_buffer.h  vertex_array.cpp  vertex_array.h
src/graphics/layer/: group.cpp  group.h  layer.cpp  layer.h
src/utils/: Timer.h  file_utils.cpp  file_utils.h  image_load.cpp  image_load.h  string_utils.cpp  string_utils.h
